--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
     <div class="container">
         <br>
-        <h3><b>Made With:</b> Flask, Python, Bootstrap, HTML, SQLite</h3>
+        <h3><b>Made With:</b> Flask, Python, Javascript, Bootstrap, HTML, SQLite</h3>
         <br>
     </div>
 
