--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				case text.includes("hello"):
 					response = "hi, how are you doing?"; break;
 				case text.includes("name"):
-					response = "My name's Siri.";  break;
+					response = "My name's Alexa.";  break;
 				case text.includes("howareyou"):
 					response = "I'm good."; break;
 				case text.includes("time"):
