Edited a few labels

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	  <script language="javascript">
 		// UI comp
 		const startBtn = document.createElement("button");
-		startBtn.innerHTML = "Start listening";
+		startBtn.innerHTML = "Start";
 		const result = document.createElement("div");
 		const processing = document.createElement("p");
 		document.write("<body><h1>Voice Assistant</h1><p>Try saying: 'hello', 'what's your name', 'how are you', 'what time is it', 'stop', ... </p></body>");
