Desktop mode declared

--- a/index.html
+++ b/index.html
@@ -190,12 +190,13 @@
         <br>
         <br>
         <br>
+	<h3>This website currently supports only Desktops</h3>
         <h3><b>Made By:</b> Parth Patel</h3>
     </div>
 
     <div class="container">
         <br>
-        <h3><b>Made With:</b> Flask, Python, Javascript, Bootstrap, HTML, SQLite</h3>
+        <h3><b>Made With:</b> Javascript, Bootstrap, HTML</h3>
         <br>
     </div>
 
