--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <style>
-      h {
-        text-align: center;
-      }
-      p {
-        text-align: center;
-      }
-      div {
-        text-align: center;
-      }
-	  script{
-		  text-align: center;
-	  }
-	  body {text-align: center;}
-
-    </style>
-
+<head>
     <!-- Required meta tags -->
-    <meta charset="utf-8" />
-   <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
-	<meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	
+    <!-- Styling Elements -->	
+    <style>
+        h {
+          text-align: center;
+        }
+        p {
+          text-align: center;
+        }
+        div {
+          text-align: center;
+        }
+        script{
+            text-align: center;
+        }
+	button {
+  	    margin-top: 20px;
+  	    line-height: 60px;
+  	    font-weight: bold;
+  	    padding: 0 40px;
+  	    background: yellowgreen;
+  	    border: none;
+	}
+        body {
+	    text-align: center;
+	    }
+  
+      </style>
+  
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -35,8 +43,8 @@
     />
 
     <title>Voice Assistant</title>
-  </head>
-  <body>
+</head>
+<body>
     <nav class="navbar navbar-dark bg-dark">
         <nav class="navbar navbar-expand-lg navbar-light bg-dark">
             <div class="container-md">
@@ -48,148 +56,12 @@
     <div class="container">
       <h1>Alexa!</h1>
       <br>
-	  </div>
-	  <script language="javascript">
-		// UI comp
-		const startBtn = document.createElement("button");
-		startBtn.innerHTML = "Start";
-		const result = document.createElement("div");
-		const processing = document.createElement("p");
-		document.write("<body><h1>Voice Assistant</h1><p>Try saying: 'hello', 'what's your name', 'how are you', 'what time is it', 'stop', ... </p></body>");
-		document.body.append(startBtn);
-		document.body.append(result);
-		document.body.append(processing);
-	
-		// speech to text
-		const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-		let toggleBtn = null;
-		if (typeof SpeechRecognition === "undefined") {
-			startBtn.remove();
-			result.innerHTML = "<b>Browser does not support Speech API. Please download latest chrome.<b>";
-		} else {
-			const recognition = new SpeechRecognition();
-			recognition.continuous = true;
-			recognition.interimResults = true;
-			recognition.onresult = event => {
-				const last = event.results.length - 1;
-				const res = event.results[last];
-				const text = res[0].transcript;
-				if (res.isFinal) {
-					processing.innerHTML = "processing ....";
-					
-					const response = process(text);
-					const p = document.createElement("p");
-					p.innerHTML = `You said: ${text} </br>Alexa said: ${response}`;
-					processing.innerHTML = "";
-					result.appendChild(p);
-	
-					// read it out
-					speechSynthesis.speak(new SpeechSynthesisUtterance(response));
-				} else {
-					processing.innerHTML = `listening: ${text}`;
-				}
-			}
-			let listening = false;
-			toggleBtn = () => {
-				if (listening) {
-					recognition.stop();
-					startBtn.textContent = "Start";
-				} else {
-					recognition.start();
-					startBtn.textContent = "Stop";
-				}
-				listening = !listening;
-			};
-			startBtn.addEventListener("click", toggleBtn);
-	
-		}
-	
-		// processor
-		function process(rawText) {
-			let text = rawText.replace(/\s/g, "");
-			//let text = rawText
-			text = text.toLowerCase();
-			let response = null;
-			/*
-			if(text.includes("hello")){
-				response = "hi, how are you doing?";
-			}
-			else if(text.includes("name")){
-				response = "My name's Alexa.";
-			}
-			else if(text.includes("howareyou")){
-				response = "I'm good.";
-			}
-			else if(text.includes("time")){
-				response = new Date().toLocaleTimeString();
-			}
-			else if(text.includes("stop") || text.includes("exit")){
-				response = "Bye!!";
-				toggleBtn();
-			}
-
-			if (!response) {
-				window.open(`http://google.com/search?q=${rawText.replace("search", "")}`, "_blank");
-				return `I found some information for ${rawText}`;
-			}
-			*/
-			
-			if(!text || text.length === 0 ){
-				response = "No voice commmand detected";
-			}
-
-			
-			switch(true) {
-				//case text.length()===0:
-				//	response = "No voice commmand detected"; break;
-				case text.includes("hello"):
-					response = "hi, how are you doing?"; break;
-				case text.includes("name"):
-					response = "My name's Alexa.";  break;
-				case text.includes("howareyou"):
-					response = "I'm good."; break;
-				case text.includes("weather"):
-					response = "The weather is good."; break;
-				case text.includes("fine"):
-					response = "good."; break;
-				case text.includes("iamgood"):
-					response = "great."; break;
-				case text.includes("time"):
-					response = new Date().toLocaleTimeString(); break;
-				case text.includes("play"):
-					window.open(`https://www.youtube.com/results?search_query=${rawText.replace("play", "")}`, "_blank");
-					response = "playing"; break;
-				case text.includes("stop") || text.includes("exit"):
-					response = "Bye!!";
-					toggleBtn(); break;
-				//case text.includes("exit"):
-				//	response = "Bye!!";
-				//	toggleBtn(); break;
-				default:
-				window.open(`http://google.com/search?q=${rawText.replace("search", "")}`, "_blank");
-				return `I found some information for ${rawText}`;
-			}
-
-			if (!response) {
-				response = "No voice commmand detected";
-			}
-
-			return response; 
-			
-		}
-	</script>
-     <!-- 
-	  <button type="button" class="btn btn-warning">
-        <a href="/voice-active/">Start</a>
-      </button>
-      <br>
-	
-
-    <div class="container">
-        <p>{{key}}</p>
     </div>
-	-->
-    <div class="container">
+    <h1>Voice Assistant</h1>
+	<p>Give it a try with 'hello', 'how are you', 'what's your name', 'what time is it', 'tell me a joke', 'stop', ... </p>
+
+    <script src = "app.js"></script>
+	<div class="container">
         <br>
         <br>
         <br>
@@ -209,21 +81,5 @@
         <h3><b>Made With:</b> Javascript, Bootstrap, HTML</h3>
         <br>
     </div>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
-    -->
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
-  </body>
+</body>
 </html>
