Updated info line

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <br>
     </div>
     <h1>Voice Assistant</h1>
-	<p>Give it a try with 'hello', 'how are you', 'what's your name', 'what time is it', 'tell me a joke', 'stop', ... </p>
+	<p>Try saying things like: 'hello', 'how are you', 'what's your name', 'what time is it', 'tell me a joke', 'stop', ... </p>
 
     <script src = "app.js"></script>
 	<div class="container">
