--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
         <br>
         <br>
         <br>
-        <br>
 	<h3>This website currently works best on Desktops</h3>
-	<h3> If you are using a Mobile device, you will have to manually press 'Stop Listening' and 'Start Listening' after each voice input</h3>
+	<h5>Note: If you are using a Mobile device, you will have to manually press 'Stop Listening' and 'Start Listening' after each voice input</h5>
         <h3><b>Made By:</b> Parth Patel</h3>
     </div>
 
