--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
 
     <div class="container">
-      <h1>Alexa!</h1>
+      <h1>Siri!</h1>
       <br>
     </div>
     <h1>Voice Assistant</h1>
